@@ -35,7 +35,7 @@ QtInstance::QtInstance(QObject* o)
       _class(0),
       _object(o)
 {
-    setExecutionContext(0);
+    setRootObject(0);
 }
 
 QtInstance::~QtInstance() 
@@ -45,7 +45,7 @@ QtInstance::~QtInstance()
 QtInstance::QtInstance(const QtInstance& other)
     : Instance(), _class(0), _object(other._object)
 {
-    setExecutionContext(other.executionContext());
+    setRootObject(other.rootObject());
 }
 
 QtInstance& QtInstance::operator=(const QtInstance& other)
