@@ -1,3 +1,4 @@
+x11 {
 TARGET = DumpRenderTree
 
 include(../../../WebKit.pri)
@@ -9,4 +10,4 @@ QT = core gui
 
 HEADERS = DumpRenderTreeClient.h DumpRenderTree.h jsobjects.h
 SOURCES = DumpRenderTreeClient.cpp DumpRenderTree.cpp main.cpp fontoverload.cpp jsobjects.cpp
-
+}
