@@ -1,3 +1,9 @@
+2006-12-28  George Staikos  <staikos@kde.org>
+
+        Reviewed by Olliej.
+
+        * loader/CachedImage.cpp: build for Qt
+
 2006-12-28  Daniel Molkentin <molkentin@kde.org>
 
         Reviewed by Eric Seidel <eric@webkit.org>
