@@ -1,3 +1,9 @@
+2006-12-28  George Staikos  <staikos@kde.org>
+
+        Reviewed by Olliej.
+
+        * DumpRenderTree/DumpRenderTree.qtproj/DumpRenderTree.pro: don't build on non-X11
+
 2006-12-27  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Eric Seidel. Prose edited by Mitz Pettel.
