@@ -1,3 +1,10 @@
+2006-12-28  George Staikos  <staikos@kde.org>
+
+        Reviewed by Olliej.
+
+        * bindings/qt/qt_instance.cpp: build
+        (KJS::Bindings::QtInstance::QtInstance):
+
 2006-12-28  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Oliver Hunt.
